adjust fileplot to .dat file paths

--- a/common/math/graphics/wavelets/d10_phi_h.tex
+++ b/common/math/graphics/wavelets/d10_phi_h.tex
@@ -35,7 +35,7 @@
   \psline[linecolor=red]{-o}(17, 0)(17,-0.0001164669)%  
   \psline[linecolor=red]{-o}(18, 0)(18, 0.0000935887)%  
   \psline[linecolor=red]{-o}(19, 0)(19,-0.0000132642)%  
-  \fileplot{../../common/wavelets/graphics/d10_phi.dat}%
+  \fileplot{../wavelets/d10_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
