--- a/common/math/graphics/wavelets/d11_phi_h.tex
+++ b/common/math/graphics/wavelets/d11_phi_h.tex
@@ -37,7 +37,7 @@
   \psline[linecolor=red]{-o}(19, 0)(19, 0.0000544391)%  
   \psline[linecolor=red]{-o}(20, 0)(20,-0.0000346350)%  
   \psline[linecolor=red]{-o}(21, 0)(21, 0.0000044943)%  
-  \fileplot{../../common/wavelets/graphics/d11_phi.dat}%
+  \fileplot{../wavelets/d11_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
