--- a/common/math/graphics/wavelets/d12_psi_g.tex
+++ b/common/math/graphics/wavelets/d12_psi_g.tex
@@ -39,7 +39,7 @@
   \psline[linecolor=red]{-o}(21, 0)(21,-0.3773551352)%  
   \psline[linecolor=red]{-o}(22, 0)(22, 0.1095662728)%  
   \psline[linecolor=red]{-o}(23, 0)(23,-0.0131122580)%  
-  \fileplot{../../common/wavelets/graphics/d12_psi.dat}%
+  \fileplot{../wavelets/d12_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
