--- a/common/math/graphics/wavelets/d16_psi_g.tex
+++ b/common/math/graphics/wavelets/d16_psi_g.tex
@@ -47,7 +47,7 @@
   \psline[linecolor=red]{-o}(29, 0)(29,-0.1650642836)%  
   \psline[linecolor=red]{-o}(30, 0)(30, 0.0349077143)%  
   \psline[linecolor=red]{-o}(31, 0)(31,-0.0031892209)%  
-  \fileplot{../../common/wavelets/graphics/d16_psi.dat}%
+  \fileplot{../wavelets/d16_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
