--- a/common/math/graphics/wavelets/d3_psi_g.tex
+++ b/common/math/graphics/wavelets/d3_psi_g.tex
@@ -17,7 +17,7 @@
   \psline[linecolor=red]{-o}(3,0)(3,-0.4598775021)%  
   \psline[linecolor=red]{-o}(4,0)(4, 0.8068915093)%  
   \psline[linecolor=red]{-o}(5,0)(5,-0.3326705530)%  
-  \fileplot{../../common/wavelets/graphics/d3_psi.dat}%
+  \fileplot{../wavelets/d3_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
