--- a/common/math/graphics/wavelets/d5_phi_h.tex
+++ b/common/math/graphics/wavelets/d5_phi_h.tex
@@ -25,7 +25,7 @@
   \psline[linecolor=red]{-o}(7, 0)(7, -0.0062414902)%  
   \psline[linecolor=red]{-o}(8, 0)(8, -0.0125807520)%  
   \psline[linecolor=red]{-o}(9, 0)(9,  0.0033357253)%  
-  \fileplot{../../common/wavelets/graphics/d5_phi.dat}%
+  \fileplot{../wavelets/d5_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
