--- a/common/math/graphics/wavelets/d7_phi_h.tex
+++ b/common/math/graphics/wavelets/d7_phi_h.tex
@@ -29,7 +29,7 @@
   \psline[linecolor=red]{-o}(11, 0)(11, 0.0004295780)%  
   \psline[linecolor=red]{-o}(12, 0)(12,-0.0018016407)%  
   \psline[linecolor=red]{-o}(13, 0)(13, 0.0003537138)%  
-  \fileplot{../../common/wavelets/graphics/d7_phi.dat}%
+  \fileplot{../wavelets/d7_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
