--- a/common/math/graphics/wavelets/d7_psi_g.tex
+++ b/common/math/graphics/wavelets/d7_psi_g.tex
@@ -29,7 +29,7 @@
   \psline[linecolor=red]{-o}(11, 0)(11,-0.7291320908)%  
   \psline[linecolor=red]{-o}(12, 0)(12, 0.3965393195)%  
   \psline[linecolor=red]{-o}(13, 0)(13,-0.0778520541)%  
-  \fileplot{../../common/wavelets/graphics/d7_psi.dat}%
+  \fileplot{../wavelets/d7_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
