--- a/common/math/graphics/wavelets/d8_phi_h.tex
+++ b/common/math/graphics/wavelets/d8_phi_h.tex
@@ -31,7 +31,7 @@
   \psline[linecolor=red]{-o}(13,0)(13,-0.0003917404)%  
   \psline[linecolor=red]{-o}(14,0)(14, 0.0006754494)%  
   \psline[linecolor=red]{-o}(15,0)(15,-0.0001174768)%  
-  \fileplot{../../common/wavelets/graphics/d8_phi.dat}%
+  \fileplot{../wavelets/d8_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
