--- a/common/math/graphics/wavelets/d8_psi_g.tex
+++ b/common/math/graphics/wavelets/d8_psi_g.tex
@@ -28,7 +28,7 @@
   \psline[linecolor=red]{-o}(13,0)(13,-0.6756307363)%  
   \psline[linecolor=red]{-o}(14,0)(14, 0.3128715909)%  
   \psline[linecolor=red]{-o}(15,0)(15,-0.0544158422)%  
-  \fileplot{../../common/wavelets/graphics/d8_psi.dat}%
+  \fileplot{../wavelets/d8_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
