--- a/common/math/graphics/wavelets/d9_phi_h.tex
+++ b/common/math/graphics/wavelets/d9_phi_h.tex
@@ -33,7 +33,7 @@
   \psline[linecolor=red]{-o}(15, 0)(15, 0.0002303858)%  
   \psline[linecolor=red]{-o}(16, 0)(16,-0.0002519632)%  
   \psline[linecolor=red]{-o}(17, 0)(17, 0.0000393473)%  
-  \fileplot{../../common/wavelets/graphics/d9_phi.dat}%
+  \fileplot{../wavelets/d9_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
