--- a/common/math/graphics/wavelets/d9_psi_g.tex
+++ b/common/math/graphics/wavelets/d9_psi_g.tex
@@ -33,7 +33,7 @@
   \psline[linecolor=red]{-o}(15, 0)(15,-0.6048231237)%  
   \psline[linecolor=red]{-o}(16, 0)(16, 0.2438346746)%  
   \psline[linecolor=red]{-o}(17, 0)(17,-0.0380779474)%  
-  \fileplot{../../common/wavelets/graphics/d9_psi.dat}%
+  \fileplot{../wavelets/d9_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
