--- a/common/math/graphics/wavelets/s12_phi_h.tex
+++ b/common/math/graphics/wavelets/s12_phi_h.tex
@@ -39,7 +39,7 @@
   \psline[linecolor=red]{-o}(21, 0)(21,-0.0013865503)%  
   \psline[linecolor=red]{-o}(22, 0)(22,-0.0000841826)%  
   \psline[linecolor=red]{-o}(23, 0)(23, 0.0000976761)%  
-  \fileplot{../../common/wavelets/graphics/s12_phi.dat}%
+  \fileplot{../wavelets/s12_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
