--- a/common/math/graphics/wavelets/s16_psi_g.tex
+++ b/common/math/graphics/wavelets/s16_psi_g.tex
@@ -47,7 +47,7 @@
   \psline[linecolor=red]{-o}(29, 0)(29,-0.0001635553)%  
   \psline[linecolor=red]{-o}(30, 0)(30,-0.0000149631)%  
   \psline[linecolor=red]{-o}(31, 0)(31, 0.0000125529)%  
-  \fileplot{../../common/wavelets/graphics/s16_psi.dat}%
+  \fileplot{../wavelets/s16_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
