--- a/common/math/graphics/wavelets/s8_phi_h.tex
+++ b/common/math/graphics/wavelets/s8_phi_h.tex
@@ -31,7 +31,7 @@
   \psline[linecolor=red]{-o}(13,0)(13,-0.0149522583)%  
   \psline[linecolor=red]{-o}(14,0)(14,-0.0003029205)%  
   \psline[linecolor=red]{-o}(15,0)(15, 0.0018899503)%  
-  \fileplot{../../common/wavelets/graphics/s8_phi.dat}%
+  \fileplot{../wavelets/s8_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
