--- a/common/math/graphics/wavelets/s8_psi_g.tex
+++ b/common/math/graphics/wavelets/s8_psi_g.tex
@@ -31,7 +31,7 @@
   \psline[linecolor=red]{-o}(13,0)(13,-0.0316950878)%  
   \psline[linecolor=red]{-o}(14,0)(14,-0.0005421323)%  
   \psline[linecolor=red]{-o}(15,0)(15, 0.0033824160)%  
-  \fileplot{../../common/wavelets/graphics/s8_psi.dat}%
+  \fileplot{../wavelets/s8_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
