--- a/common/math/graphics/wavelets/tent_phi_h.tex
+++ b/common/math/graphics/wavelets/tent_phi_h.tex
@@ -37,5 +37,5 @@
   \psline[linecolor=red]{-o}(0,0)(h0)%
   \psline[linecolor=red]{-o}(1,0)(h1)%
   \psline[linecolor=red]{-o}(2,0)(h2)%
-  \fileplot{../../common/wavelets/graphics/tent_phi.dat}%
+  \fileplot{../wavelets/tent_phi.dat}%
 \end{pspicture}%
