--- a/common/math/graphics/wavelets/bspline_phi_h.tex
+++ b/common/math/graphics/wavelets/bspline_phi_h.tex
@@ -31,7 +31,7 @@
   \psline[linecolor=red]{-o}(2,0)(h2)%  
   \psline[linecolor=red]{-o}(3,0)(h3)%  
   \psline[linecolor=red]{-o}(4,0)(h4)%  
-  \fileplot{../../common/wavelets/graphics/bspline_phi.dat}%
+  \fileplot{../wavelets/bspline_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
