--- a/common/math/graphics/wavelets/bspline_psi_g.tex
+++ b/common/math/graphics/wavelets/bspline_psi_g.tex
@@ -31,7 +31,7 @@
   \psline[linecolor=red]{-o}(2,0)(g2)%  
   \psline[linecolor=red]{-o}(3,0)(g3)%  
   \psline[linecolor=red]{-o}(4,0)(g4)%  
-  \fileplot{../../common/wavelets/graphics/bspline_psi.dat}%
+  \fileplot{../wavelets/bspline_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
