--- a/common/math/graphics/wavelets/d10_psi_g.tex
+++ b/common/math/graphics/wavelets/d10_psi_g.tex
@@ -35,7 +35,7 @@
   \psline[linecolor=red]{-o}(17, 0)(17,-0.5272011889)%  
   \psline[linecolor=red]{-o}(18, 0)(18, 0.1881768001)%  
   \psline[linecolor=red]{-o}(19, 0)(19,-0.0266700579)%  
-  \fileplot{../../common/wavelets/graphics/d10_psi.dat}%
+  \fileplot{../wavelets/d10_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
