--- a/common/math/graphics/wavelets/d1_psi_g.tex
+++ b/common/math/graphics/wavelets/d1_psi_g.tex
@@ -33,5 +33,5 @@
   \psaxes[linecolor=axis,xAxis=false,labels=y]{<->}(0,0)(0,-1.5)(1.5,1.5)%   y-axis
   \psline[linecolor=red]{-o}(0,0)(g0)%
   \psline[linecolor=red]{-o}(1,0)(g1)%
-  \fileplot{../../common/wavelets/graphics/d1_psi.dat}%
+  \fileplot{../wavelets/d1_psi.dat}%
 \end{pspicture}
