--- a/common/math/graphics/wavelets/d2_phi_h.tex
+++ b/common/math/graphics/wavelets/d2_phi_h.tex
@@ -22,7 +22,7 @@
   \psline[linecolor=red]{-o}(1,0)(h1)%  
   \psline[linecolor=red]{-o}(2,0)(h2)%  
   \psline[linecolor=red]{-o}(3,0)(h3)%  
-  \fileplot{../../common/wavelets/graphics/d2_phi.dat}%
+  \fileplot{../wavelets/d2_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
