--- a/common/math/graphics/wavelets/d3_phi_h.tex
+++ b/common/math/graphics/wavelets/d3_phi_h.tex
@@ -17,7 +17,7 @@
   \psline[linecolor=red]{-o}(3,0)(3,-0.1350110200)%  
   \psline[linecolor=red]{-o}(4,0)(4,-0.0854412739)%  
   \psline[linecolor=red]{-o}(5,0)(5, 0.0352262919)%  
-  \fileplot{../../common/wavelets/graphics/d3_phi.dat}%
+  \fileplot{../wavelets/d3_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
