--- a/common/math/graphics/wavelets/d4_phi_h.tex
+++ b/common/math/graphics/wavelets/d4_phi_h.tex
@@ -23,7 +23,7 @@
   \psline[linecolor=red]{-o}(5,0)(5, 0.0308413818)% h5 
   \psline[linecolor=red]{-o}(6,0)(6, 0.0328830117)% h6 
   \psline[linecolor=red]{-o}(7,0)(7,-0.0105974018)% h7 
-  \fileplot{../../common/wavelets/graphics/d4_phi.dat}%
+  \fileplot{../wavelets/d4_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
