--- a/common/math/graphics/wavelets/d4_psi_g.tex
+++ b/common/math/graphics/wavelets/d4_psi_g.tex
@@ -20,7 +20,7 @@
   \psline[linecolor=red]{-o}(5,0)(5,-0.6308807679)% =g5=-h2| h5= 0.0308413818
   \psline[linecolor=red]{-o}(6,0)(6, 0.7148465706)% =g6= h1| h6= 0.0328830117
   \psline[linecolor=red]{-o}(7,0)(7,-0.2303778133)% =g7=-h0| h7=-0.0105974018
-  \fileplot{../../common/wavelets/graphics/d4_psi.dat}%
+  \fileplot{../wavelets/d4_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
