--- a/common/math/graphics/wavelets/d5_psi_g.tex
+++ b/common/math/graphics/wavelets/d5_psi_g.tex
@@ -22,7 +22,7 @@
   \psline[linecolor=red]{-o}(7, 0)(7, -0.7243085284)%  
   \psline[linecolor=red]{-o}(8, 0)(8,  0.6038292698)%  
   \psline[linecolor=red]{-o}(9, 0)(9, -0.1601023980)%  
-  \fileplot{../../common/wavelets/graphics/d5_psi.dat}%
+  \fileplot{../wavelets/d5_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
