--- a/common/math/graphics/wavelets/d6_phi_h.tex
+++ b/common/math/graphics/wavelets/d6_phi_h.tex
@@ -27,7 +27,7 @@
   \psline[linecolor=red]{-o}( 9, 0)( 9,  0.0005538422)%  
   \psline[linecolor=red]{-o}(10, 0)(10,  0.0047772575)%  
   \psline[linecolor=red]{-o}(11, 0)(11, -0.0010773011)%  
-  \fileplot{../../common/wavelets/graphics/d6_phi.dat}%
+  \fileplot{../wavelets/d6_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
