--- a/common/math/graphics/wavelets/d6_psi_g.tex
+++ b/common/math/graphics/wavelets/d6_psi_g.tex
@@ -27,7 +27,7 @@
   \psline[linecolor=red]{-o}( 9, 0)( 9, -0.7511339080)%  
   \psline[linecolor=red]{-o}(10, 0)(10,  0.4946238904)%  
   \psline[linecolor=red]{-o}(11, 0)(11, -0.1115407434)%  
-  \fileplot{../../common/wavelets/graphics/d6_psi.dat}%
+  \fileplot{../wavelets/d6_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
