--- a/common/math/graphics/wavelets/s12_psi_g.tex
+++ b/common/math/graphics/wavelets/s12_psi_g.tex
@@ -39,7 +39,7 @@
   \psline[linecolor=red]{-o}(21, 0)(21,-0.0021044473)%  
   \psline[linecolor=red]{-o}(22, 0)(22,-0.0001769095)%  
   \psline[linecolor=red]{-o}(23, 0)(23, 0.0002052660)%  
-  \fileplot{../../common/wavelets/graphics/s12_psi.dat}%
+  \fileplot{../wavelets/s12_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
