--- a/common/math/graphics/wavelets/s16_phi_h.tex
+++ b/common/math/graphics/wavelets/s16_phi_h.tex
@@ -47,7 +47,7 @@
   \psline[linecolor=red]{-o}(29, 0)(29,-0.0001001485)%  
   \psline[linecolor=red]{-o}(30, 0)(30,-0.0000063880)%  
   \psline[linecolor=red]{-o}(31, 0)(31, 0.0000053590)%  
-  \fileplot{../../common/wavelets/graphics/s16_phi.dat}%
+  \fileplot{../wavelets/s16_phi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
