--- a/common/math/graphics/wavelets/s4_psi_g.tex
+++ b/common/math/graphics/wavelets/s4_psi_g.tex
@@ -23,7 +23,7 @@
   \psline[linecolor=red]{-o}(5,0)(5,-0.4976186676)%  
   \psline[linecolor=red]{-o}(6,0)(6,-0.0296355276)%  
   \psline[linecolor=red]{-o}(7,0)(7, 0.0757657148)%  
-  \fileplot{../../common/wavelets/graphics/s4_psi.dat}%
+  \fileplot{../wavelets/s4_psi.dat}%
   %-------------------------------------
   % labels
   %-------------------------------------
