--- a/common/math/graphics/wavelets/tent_psi_g.tex
+++ b/common/math/graphics/wavelets/tent_psi_g.tex
@@ -38,5 +38,5 @@
   \psline[linecolor=red]{-o}(0,0)(h0)%
   \psline[linecolor=red]{-o}(1,0)(h1)%
   \psline[linecolor=red]{-o}(2,0)(h2)%
-  \fileplot{../../common/wavelets/graphics/tent_psi.dat}%
+  \fileplot{../wavelets/tent_psi.dat}%
 \end{pspicture}%
