path corrections for graphics involving wavelets and bsplines

--- a/common/math/graphics/pdfs/shell_bspline_psi_g.tex
+++ b/common/math/graphics/pdfs/shell_bspline_psi_g.tex
@@ -9,5 +9,5 @@
   \psset{unit=1\latunit}%
   %\psset{xunit=2\latunit}%
   %\psset{yunit=1\latunit}%
-  \input{../../../wavelets/graphics/bspline_psi_g.tex}%
+  \input{../wavelets/bspline_psi_g.tex}%
 \end{document}%
