--- a/common/math/graphics/pdfs/shell_haar0_sin_t.tex
+++ b/common/math/graphics/pdfs/shell_haar0_sin_t.tex
@@ -6,5 +6,5 @@
 \input{shelltop.tex}%
 \begin{document}%
   \psset{unit=0.8\latunit}%
-  \input{../../common/wavelets/graphics/haar0_sin_t.tex}%
+  \input{../wavelets/haar0_sin_t.tex}%
 \end{document}%
