--- a/common/math/graphics/pdfs/shell_haar2_sin_5.tex
+++ b/common/math/graphics/pdfs/shell_haar2_sin_5.tex
@@ -7,5 +7,5 @@
 \begin{document}%
   \psset{xunit=0.2\latunit}%
   \psset{yunit=0.8\latunit}%
-  \input{../../common/wavelets/graphics/haar2_sin_a.tex}%
+  \input{../wavelets/haar2_sin_a.tex}%
 \end{document}%
