--- a/common/math/graphics/pdfs/shell_bspline_pz.tex
+++ b/common/math/graphics/pdfs/shell_bspline_pz.tex
@@ -10,5 +10,5 @@
   \psset{unit=1\latunit}%
   %\psset{xunit=2\latunit}%
   %\psset{yunit=1\latunit}%
-  \input{../../../wavelets/graphics/bspline_pz.tex}%
+  \input{../wavelets/bspline_pz.tex}%
 \end{document}%
