--- a/common/math/graphics/pdfs/shell_haar1_sin_t.tex
+++ b/common/math/graphics/pdfs/shell_haar1_sin_t.tex
@@ -7,5 +7,5 @@
 \begin{document}%
   \psset{xunit=0.4\latunit}%
   \psset{yunit=0.8\latunit}%
-  \input{../../common/wavelets/graphics/haar1_sin_t.tex}%
+  \input{../wavelets/haar1_sin_t.tex}%
 \end{document}%
