data graphics files path to .dat files

--- a/common/math/graphics/data/earthquake_kapi_20180928.tex
+++ b/common/math/graphics/data/earthquake_kapi_20180928.tex
@@ -19,5 +19,5 @@
   % plot
   %-------------------------------------
   \psset{linewidth=0.75pt}%
-  \fileplot{../../common/math/graphics/data/earthquake_kapi_20180928_ds5.dat}%
+  \fileplot{../data/earthquake_kapi_20180928_ds5.dat}%
 \end{pspicture}%
