--- a/common/math/graphics/data/egg-production.tex
+++ b/common/math/graphics/data/egg-production.tex
@@ -47,7 +47,7 @@
 %-------------------------------------
 \rput(-16,0){% set 2016 at x=0
   \psset{linewidth=0.75pt, dotstyle=diamond, showpoints=true}%
-  \readdata{\dataall}{../../common/math/graphics/data/egg-production_all.dat}%
+  \readdata{\dataall}{../data/egg-production_all.dat}%
   \dataplot{\dataall}%
   }%
 \end{pspicture}%
