--- a/common/math/graphics/data/sunspots_welchPSD_4segs.tex
+++ b/common/math/graphics/data/sunspots_welchPSD_4segs.tex
@@ -33,5 +33,5 @@
   % plot data
   %-------------------------------------
   \psset{linewidth=0.75pt}
-  \fileplot{../../common/math/graphics/data/sunspots_welchPSD_4segs.dat}%
+  \fileplot{../data/sunspots_welchPSD_4segs.dat}%
 \end{pspicture}%
