--- a/common/math/graphics/data/sunspots.tex
+++ b/common/math/graphics/data/sunspots.tex
@@ -30,6 +30,6 @@
   %-------------------------------------
   % plot data
   %-------------------------------------
-  %\fileplot{../../common/math/graphics/data/sunspots_wdc-silso.dat}%
+  %\fileplot{../data/sunspots_wdc-silso.dat}%
   \fileplot{../data/sunspots_wdc-silso.dat}%
 \end{pspicture}%
