central graphics repository: setops

--- a/common/math/graphics/pdfs/shell_lat10_m4m4oc_wxyz.tex
+++ b/common/math/graphics/pdfs/shell_lat10_m4m4oc_wxyz.tex
@@ -9,5 +9,5 @@
  \psset{xunit=0.667\latunit}%
  \psset{yunit=0.667\latunit}%
   \gsize%
-  \input{../lat/lat10_m4m4oc_wxyz.tex}%
+  \input{../latoc/lat10_m4m4oc_wxyz.tex}%
 \end{document}%
