--- a/common/math/graphics/pdfs/shell_lat10_n5n5oc_xyp.tex
+++ b/common/math/graphics/pdfs/shell_lat10_n5n5oc_xyp.tex
@@ -9,5 +9,5 @@
  \psset{xunit=0.667\latunit}%
  \psset{yunit=0.667\latunit}%
   \gsize%
-  \input{../lat/lat10_n5n5oc_xyp.tex}%
+  \input{../latoc/lat10_n5n5oc_xyp.tex}%
 \end{document}%
