--- a/common/math/graphics/pdfs/shell_latocdil7_abxyzcd.tex
+++ b/common/math/graphics/pdfs/shell_latocdil7_abxyzcd.tex
@@ -9,5 +9,5 @@
  \psset{xunit=1\latunit}%
  \psset{yunit=1\latunit}%
   \gsize%
-  \input{../latocdil7_abxyzcd.tex}%
+  \input{../latoc/latocdil7_abxyzcd.tex}%
 \end{document}%
