--- a/common/math/graphics/pdfs/shell_venn_setdiff.tex
+++ b/common/math/graphics/pdfs/shell_venn_setdiff.tex
@@ -9,5 +9,5 @@
   \psset{xunit=1\latunit}%
   \psset{yunit=1\latunit}%
   \gsize%
-  \input{../venn/venn_setdiff.tex}%
+  \input{../setops/venn_setdiff.tex}%
 \end{document}%
