central graphics repository: latlat

--- a/common/math/graphics/pdfs/shell_latlatalgxyz.tex
+++ b/common/math/graphics/pdfs/shell_latlatalgxyz.tex
@@ -12,5 +12,5 @@
   \psset{xunit=2\latunit}%
   \psset{yunit=2\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/latlatalgxyz.tex}%
+  \input{../setstr/latlatalgxyz.tex}%
 \end{document}%
