--- a/common/math/graphics/pdfs/shell_latlatpartwxyz.tex
+++ b/common/math/graphics/pdfs/shell_latlatpartwxyz.tex
@@ -9,5 +9,5 @@
   \psset{xunit=2.5\latunit}%
   \psset{yunit=2.5\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/latlatpartwxyz.tex}%
+  \input{../setstr/latlatpartwxyz.tex}%
 \end{document}%
