--- a/common/math/graphics/pdfs/shell_latlattopxyz_covers.tex
+++ b/common/math/graphics/pdfs/shell_latlattopxyz_covers.tex
@@ -10,5 +10,5 @@
   %\psset{xunit=3\latunit}%
   %\psset{yunit=3\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/latlattopxyz_covers.tex}%
+  \input{../setstr/latlattopxyz_covers.tex}%
 \end{document}%
