--- a/common/math/graphics/pdfs/shell_m3m3_antichain_abcpqr.tex
+++ b/common/math/graphics/pdfs/shell_m3m3_antichain_abcpqr.tex
@@ -7,8 +7,5 @@
 \input{shelltop.tex}%
 \begin{document}%
   \psset{unit=0.75\latunit}%
- %\psset{xunit=0.667\latunit}%
- %\psset{yunit=0.667\latunit}%
-  \gsize%
-  \input{../../common/math/graphics/m3m3_antichain_abcpqr.tex}%
+  \input{../m3m3_antichain_abcpqr.tex}%
 \end{document}%
