--- a/common/math/graphics/pdfs/shell_mo2_xy.tex
+++ b/common/math/graphics/pdfs/shell_mo2_xy.tex
@@ -6,8 +6,7 @@
 %============================================================================
 \input{shelltop.tex}%
 \begin{document}%
- \psset{xunit=0.75\latunit}%
- \psset{yunit=0.75\latunit}%
-  \gsize%
-  \input{../../common/math/graphics/mo2_xy.tex}%
+  \psset{xunit=0.75\latunit}%
+  \psset{yunit=0.75\latunit}%
+  \input{../mo2_xy.tex}%
 \end{document}%
