--- a/common/math/graphics/pdfs/shell_mo2x2.tex
+++ b/common/math/graphics/pdfs/shell_mo2x2.tex
@@ -9,5 +9,5 @@
  \psset{xunit=0.75\latunit}%
  \psset{yunit=0.75\latunit}%
   \gsize%
-  \input{../../common/math/graphics/mo2x2.tex}%
+  \input{../mo2x2.tex}%
 \end{document}%
