--- a/common/math/graphics/pdfs/shell_n5ton5.tex
+++ b/common/math/graphics/pdfs/shell_n5ton5.tex
@@ -6,8 +6,7 @@
 %============================================================================
 \input{shelltop.tex}%
 \begin{document}%
- \psset{xunit=0.5\latunit}%
- \psset{yunit=0.5\latunit}%
-  \gsize%
-  \input{../../common/math/graphics/n5ton5.tex}%
+  \psset{xunit=0.5\latunit}%
+  \psset{yunit=0.5\latunit}%
+  \input{../n5ton5.tex}%
 \end{document}%
