--- a/common/math/graphics/pdfs/shell_latlatringsxyz.tex
+++ b/common/math/graphics/pdfs/shell_latlatringsxyz.tex
@@ -12,5 +12,5 @@
   \psset{xunit=2\latunit}%
   \psset{yunit=2\latunit}%
   \gsize%
-  \input{../../common/math/graphics/latlatringsxyz.tex}%
+  \input{../latlatringsxyz.tex}%
 \end{document}%
