--- a/common/math/graphics/pdfs/shell_latlatringxy.tex
+++ b/common/math/graphics/pdfs/shell_latlatringxy.tex
@@ -9,5 +9,5 @@
   \psset{xunit=2\latunit}%
   \psset{yunit=2\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/latlatringxy.tex}%
+  \input{../setstr/latlatringxy.tex}%
 \end{document}%
