--- a/common/math/graphics/pdfs/shell_latlatringxyz.tex
+++ b/common/math/graphics/pdfs/shell_latlatringxyz.tex
@@ -12,5 +12,5 @@
   \psset{xunit=0.022\latunit}%
   \psset{yunit=0.030\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/latlatringxyz.tex}%
+  \input{../setstr/latlatringxyz.tex}%
 \end{document}%
