--- a/common/math/graphics/pdfs/shell_latlattopxyz.tex
+++ b/common/math/graphics/pdfs/shell_latlattopxyz.tex
@@ -12,5 +12,5 @@
   \psset{xunit=0.18mm}%                                                         
   \psset{yunit=0.20mm}%                                                         
   \gsize%                                                                     
-  \input{../../common/math/graphics/setstr/latlattopxyz.tex}%             
+  \input{../setstr/latlattopxyz.tex}%             
 \end{document}%                                                               
