--- a/common/math/graphics/pdfs/shell_m2tol4.tex
+++ b/common/math/graphics/pdfs/shell_m2tol4.tex
@@ -6,8 +6,7 @@
 %============================================================================
 \input{shelltop.tex}%
 \begin{document}%
- \psset{xunit=0.5\latunit}%
- \psset{yunit=0.5\latunit}%
-  \gsize%
-  \input{../../common/math/graphics/m2tol4.tex}%
+  \psset{xunit=0.5\latunit}%
+  \psset{yunit=0.5\latunit}%
+  \input{../m2tol4.tex}%
 \end{document}%
