central graphics repository: misc

--- a/common/lattice.tex
+++ b/common/lattice.tex
@@ -1177,7 +1177,6 @@ with  a ``head" or ``tail" added to each one.
       &\includegraphics{../common/math/graphics/pdfs/lat7_l2onm3onl2.pdf}%   lattice 11
       &\includegraphics{../common/math/graphics/pdfs/lat7_n7.pdf}%           lattice 12
       &\includegraphics{../common/math/graphics/pdfs/lat7_l7.pdf}%   
-     %&\includegraphics[height=18.5mm]{graphics/lat7_l7.pdf}%   
     \\\hline
     \mc{7}{|G|}{non-self dual 7 element lattices --- first half (20 lattices)}
     \\\hline
@@ -1204,26 +1203,26 @@ with  a ``head" or ``tail" added to each one.
     \\\hline
     \mc{7}{|G|}{non-self dual 7 element lattices --- duals of first half (20 lattices)}
     \\\hline%1
-      \reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_m3n5.pdf}}%           lattice  1
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_m2inm2.pdf}}%         lattice  2
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_m2m2m2.pdf}}%         lattice  3
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_m2m3.pdf}}%           lattice  4
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_m2o6.pdf}}%           lattice  5
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_o7slash.pdf}}%        lattice  6
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_n6m2.pdf}}%           lattice  7
-    \\\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_n6n5.pdf}}%           lattice  8
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_n5m2.pdf}}%           lattice  9
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2onm4.pdf}}%         lattice 10
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2onp3.pdf}}%         lattice 11
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2onp3dual.pdf}}%     lattice 12
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l3onn5.pdf}}%         lattice 13
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2ono6slash.pdf}}%    lattice 14
-    \\\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2ono6.pdf}}%         lattice 15
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2onl4inm2.pdf}}%     lattice 16
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l3onm3.pdf}}%         lattice 17
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l2onn6.pdf}}%         lattice 18
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l3onm2onl2.pdf}}%     lattice 19
-     &\reflectbox{\includegraphics[angle=180,origin=b]{graphics/lat7_l4onm2.pdf}}%         lattice 20
+      \reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_m3n5.pdf}}%           lattice  1
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_m2inm2.pdf}}%         lattice  2
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_m2m2m2.pdf}}%         lattice  3
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_m2m3.pdf}}%           lattice  4
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_m2o6.pdf}}%           lattice  5
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_o7slash.pdf}}%        lattice  6
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_n6m2.pdf}}%           lattice  7
+    \\\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_n6n5.pdf}}%           lattice  8
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_n5m2.pdf}}%           lattice  9
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2onm4.pdf}}%         lattice 10
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2onp3.pdf}}%         lattice 11
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2onp3dual.pdf}}%     lattice 12
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l3onn5.pdf}}%         lattice 13
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2ono6slash.pdf}}%    lattice 14
+    \\\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2ono6.pdf}}%         lattice 15
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2onl4inm2.pdf}}%     lattice 16
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l3onm3.pdf}}%         lattice 17
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l2onn6.pdf}}%         lattice 18
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l3onm2onl2.pdf}}%     lattice 19
+     &\reflectbox{\includegraphics[angle=180,origin=b]{../common/math/graphics/pdfs/lat7_l4onm2.pdf}}%         lattice 20
     \\\hline
   \end{tabular*}
   \caption{The 53 unlabeled lattices on a 7 element set \xref{ex:lat_set7}\label{fig:lat_set7}}
