--- a/common/math/graphics/pdfs/shell_latnegations.tex
+++ b/common/math/graphics/pdfs/shell_latnegations.tex
@@ -9,5 +9,5 @@
  \psset{xunit=12mm}%
  \psset{yunit=18mm}%
   \gsize%
-  \input{../../common/math/graphics/latnegations.tex}%
+  \input{../latnegations.tex}%
 \end{document}%
