--- a/common/math/graphics/pdfs/shell_latsetops.tex
+++ b/common/math/graphics/pdfs/shell_latsetops.tex
@@ -9,5 +9,5 @@
   \psset{xunit=2.7\latunit}%
   \psset{yunit=2.7\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setops/latsetops.tex}%
+  \input{../setops/latsetops.tex}%
 \end{document}%
