--- a/common/math/graphics/pdfs/shell_standardsetops.tex
+++ b/common/math/graphics/pdfs/shell_standardsetops.tex
@@ -9,5 +9,5 @@
  \psset{xunit=0.1\latunit}%
  \psset{yunit=0.1\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setops/standardsetops.tex}%
+  \input{../setops/standardsetops.tex}%
 \end{document}%
