--- a/common/math/graphics/setops/latsetops.tex
+++ b/common/math/graphics/setops/latsetops.tex
@@ -66,38 +66,22 @@
     dotsep=0.5pt,
     linecolor=blue,
     }%
-  \rput(r0000){\input{../../common/math/graphics/setops/setop_0000.tex}}%
-  \rput(r0001){\input{../../common/math/graphics/setops/setop_0001.tex}}%
-  \rput(r0010){\input{../../common/math/graphics/setops/setop_0010.tex}}%
-  \rput(r0011){\input{../../common/math/graphics/setops/setop_0011.tex}}%
-  \rput(r0100){\input{../../common/math/graphics/setops/setop_0100.tex}}%
-  \rput(r0101){\input{../../common/math/graphics/setops/setop_0101.tex}}%
-  \rput(r0110){\input{../../common/math/graphics/setops/setop_0110.tex}}%
-  \rput(r0111){\input{../../common/math/graphics/setops/setop_0111.tex}}%
-  \rput(r1000){\input{../../common/math/graphics/setops/setop_1000.tex}}%
-  \rput(r1001){\input{../../common/math/graphics/setops/setop_1001.tex}}%
-  \rput(r1010){\input{../../common/math/graphics/setops/setop_1010.tex}}%
-  \rput(r1011){\input{../../common/math/graphics/setops/setop_1011.tex}}%
-  \rput(r1100){\input{../../common/math/graphics/setops/setop_1100.tex}}%
-  \rput(r1101){\input{../../common/math/graphics/setops/setop_1101.tex}}%
-  \rput(r1110){\input{../../common/math/graphics/setops/setop_1110.tex}}%
-  \rput(r1111){\input{../../common/math/graphics/setops/setop_1111.tex}}%
- %\rput(r0000){\includegraphics{../../common/math/graphics/setops/setop_0000.pdf}}%
- %\rput(r0001){\includegraphics{../../common/math/graphics/setops/setop_0001.pdf}}%
- %\rput(r0010){\includegraphics{../../common/math/graphics/setops/setop_0010.pdf}}%
- %\rput(r0011){\includegraphics{../../common/math/graphics/setops/setop_0011.pdf}}%
- %\rput(r0100){\includegraphics{../../common/math/graphics/setops/setop_0100.pdf}}%
- %\rput(r0101){\includegraphics{../../common/math/graphics/setops/setop_0101.pdf}}%
- %\rput(r0110){\includegraphics{../../common/math/graphics/setops/setop_0110.pdf}}%
- %\rput(r0111){\includegraphics{../../common/math/graphics/setops/setop_0111.pdf}}%
- %\rput(r1000){\includegraphics{../../common/math/graphics/setops/setop_1000.pdf}}%
- %\rput(r1001){\includegraphics{../../common/math/graphics/setops/setop_1001.pdf}}%
- %\rput(r1010){\includegraphics{../../common/math/graphics/setops/setop_1010.pdf}}%
- %\rput(r1011){\includegraphics{../../common/math/graphics/setops/setop_1011.pdf}}%
- %\rput(r1100){\includegraphics{../../common/math/graphics/setops/setop_1100.pdf}}%
- %\rput(r1101){\includegraphics{../../common/math/graphics/setops/setop_1101.pdf}}%
- %\rput(r1110){\includegraphics{../../common/math/graphics/setops/setop_1110.pdf}}%
- %\rput(r1111){\includegraphics{../../common/math/graphics/setops/setop_1111.pdf}}%
+  \rput(r0000){\input{../setops/setop_0000.tex}}%
+  \rput(r0001){\input{../setops/setop_0001.tex}}%
+  \rput(r0010){\input{../setops/setop_0010.tex}}%
+  \rput(r0011){\input{../setops/setop_0011.tex}}%
+  \rput(r0100){\input{../setops/setop_0100.tex}}%
+  \rput(r0101){\input{../setops/setop_0101.tex}}%
+  \rput(r0110){\input{../setops/setop_0110.tex}}%
+  \rput(r0111){\input{../setops/setop_0111.tex}}%
+  \rput(r1000){\input{../setops/setop_1000.tex}}%
+  \rput(r1001){\input{../setops/setop_1001.tex}}%
+  \rput(r1010){\input{../setops/setop_1010.tex}}%
+  \rput(r1011){\input{../setops/setop_1011.tex}}%
+  \rput(r1100){\input{../setops/setop_1100.tex}}%
+  \rput(r1101){\input{../setops/setop_1101.tex}}%
+  \rput(r1110){\input{../setops/setop_1110.tex}}%
+  \rput(r1111){\input{../setops/setop_1111.tex}}%
   %---------------------------------
   % node labels
   %---------------------------------
