--- a/common/math/graphics/pdfs/shell_ellipse21.tex
+++ b/common/math/graphics/pdfs/shell_ellipse21.tex
@@ -10,5 +10,5 @@
   \psset{yunit=0.75\latunit}%
   %\psset{xunit=2\latunit}%
   %\psset{yunit=1\latunit}%
-  \input{../../common/math/graphics/ellipse21.tex}%
+  \input{../ellipse21.tex}%
 \end{document}%
