--- a/common/math/graphics/pdfs/shell_ex_convex.tex
+++ b/common/math/graphics/pdfs/shell_ex_convex.tex
@@ -9,5 +9,5 @@
   \psset{xunit=0.75\latunit}%
   \psset{yunit=0.75\latunit}%
   \gsize%
-  \input{../../common/math/graphics/ex_convex.tex}%
+  \input{../ex_convex.tex}%
 \end{document}%
