--- a/common/math/graphics/pdfs/shell_fnct123le123.tex
+++ b/common/math/graphics/pdfs/shell_fnct123le123.tex
@@ -10,5 +10,5 @@
   \psset{yunit=0.75\latunit}%
   %\psset{xunit=2\latunit}%
   %\psset{yunit=1\latunit}%
-  \input{../../common/math/graphics/fnct123le123.tex}%
+  \input{../fnct123le123.tex}%
 \end{document}%
