--- a/common/math/graphics/pdfs/shell_lattopxy.tex
+++ b/common/math/graphics/pdfs/shell_lattopxy.tex
@@ -9,5 +9,5 @@
   \psset{xunit=1\latunit}%
   \psset{yunit=1\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/lattopxy.tex}%
+  \input{../setstr/lattopxy.tex}%
 \end{document}%
