--- a/common/math/graphics/pdfs/shell_latwavxyz.tex
+++ b/common/math/graphics/pdfs/shell_latwavxyz.tex
@@ -9,5 +9,5 @@
  \psset{xunit=0.75\latunit}%
  \psset{yunit=0.75\latunit}%
   \gsize%
-  \input{../../common/math/graphics/setstr/latwavxyz.tex}%
+  \input{../setstr/latwavxyz.tex}%
 \end{document}%
