--- a/common/math/graphics/pdfs/shell_spaces.tex
+++ b/common/math/graphics/pdfs/shell_spaces.tex
@@ -9,5 +9,5 @@
  %\psset{xunit=0.75\latunit}%
  %\psset{yunit=0.75\latunit}%
   \gsize%
-  \input{../../common/math/graphics/spaces.tex}%
+  \input{../spaces.tex}%
 \end{document}%
