central graphics repository: dna

--- a/common/math/graphics/pdfs/shelltop.tex
+++ b/common/math/graphics/pdfs/shelltop.tex
@@ -17,6 +17,7 @@
  \usepackage{../../../sty/math}%
  \usepackage{../../../sty/wavelets}%
 %\usepackage{../../../sty/language}%
+ \usepackage{../../../sty/ocs}%
  \usepackage{../../../sty/defaults}  % default values
  \usepackage{../../../sty/switches}  %
 %--------------------------------------
