central graphics repository: symseq, pds

--- a/common/math/graphics/balls/rdie_3d_larcball.tex
+++ b/common/math/graphics/balls/rdie_3d_larcball.tex
@@ -3,16 +3,14 @@
 % LaTeX file
 % discrete metric real die mapping to 4 outcome spaces
 %============================================================================
-%{\psset{unit=10mm}%
 \begin{pspicture}(1,1)(1,7)%
-  %\psframe(-2,0)(2,12)%
   \begin{tikzpicture}%
     \begin{axis}[%
       %3d box=background,
       %xlabel={$x$},ylabel={$y$},zlabel={$z$},
       width=10\psunit,%
       height=10\psunit,%
-      %%z post scale=2.5,
+      %z post scale=2.5,
       %xmode=normal, ymode=normal, zmode=normal,
       axis lines=none,%
       line width=1.5pt,%
@@ -20,15 +18,12 @@
       view={45}{45},%
       %%colorbar horizontal,
       ]%
-      %\addplot3[mesh] table[header=false]{../../wsd/plt/p4psi42.dat}%
-      %\addplot3[mesh] table[header=false]{../../common/math/graphics/balls/p4psi42.dat}%
-      %\addplot3[mesh] table[header=false]{../../common/math/graphics/balls/rdie_3d_larcball_001.dat}%
-      \addplot3[mesh] table[header=false]{../../common/math/graphics/balls/r2.dat};
-      %\addplot3[mesh] table[header=false]{../../common/math/graphics/balls/re.dat}%
+     %\addplot3[mesh] table[header=false]{../balls/p4psi42.dat}%
+     %\addplot3[mesh] table[header=false]{../balls/rdie_3d_larcball_001.dat}%
+      \addplot3[mesh] table[header=false]{../balls/r2.dat};
+     %\addplot3[mesh] table[header=false]{../balls/re.dat}%
     \end{axis}%
   \end{tikzpicture}%
   \psdot(0,0)%
-  %\fileplotThreeD{../../common/math/graphics/balls/r.dat}%
   %\fileplotThreeD{../../common/math/graphics/balls/rp.dat}%
 \end{pspicture}%
-%}%
