central graphics repository: symseq seq

--- a/common/math/graphics/pdfs/shell_123le12.tex
+++ b/common/math/graphics/pdfs/shell_123le12.tex
@@ -9,5 +9,5 @@
   \psset{xunit=0.75\latunit}%
   \psset{yunit=0.75\latunit}%
   \gsize%
-  \input{../../common/math/graphics/123le12.tex}%
+  \input{../123le12.tex}%
 \end{document}%
