central graphics repository

--- a/common/math/graphics/symseq/larc_R2_balls.tex
+++ b/common/math/graphics/symseq/larc_R2_balls.tex
@@ -13,19 +13,9 @@
       \psdot[linecolor=red,dotsize=3pt](center)%
       %\psline[linecolor=red](-1,0.707)(2,0.707)%
       %\psline[linecolor=red](0.707,-1)(0.707,2)%
-      \fileplot\input{../symseq/larc_ball(0_0).dat}%
+      \fileplot{../symseq/larc_ball(0_0).dat}%
       \uput[45]{0}(center){$\opair{0}{0}$}
-    \end{pspicture} 
-   %&
-   % \begin{pspicture}(-3.5,-3.5)(4.5,4.5)%
-   %   \pnode(0,0.5){center}
-   %   \psaxes[linecolor=axis]{<->}(0,0)(-3.5,-3.5)(4.5,4.5)%
-   %   \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
-   %  %\rput(0,-0.5){\psplot[polarplot=true,linecolor=red,plotstyle=line]{0}{360}{1 x 180 sub sin sub 1.27535 mul 0 add}}% cardioid ref: http://mathworld.wolfram.com/HeartCurve.html
-   %   \psdot[linecolor=red,dotsize=3pt](center)%
-   %   \fileplot\input{../symseq/larc_ball(00_05).dat}%
-   %   \uput[0]{0}(center){$\opair{0}{0.5}$}
-   % \end{pspicture} 
+    \end{pspicture}
    &
     \begin{pspicture}(-3.5,-3.5)(4.5,4.5)%
       \pnode(0.5,0.5){center}
@@ -33,29 +23,18 @@
       \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
      %\rput(0,-0.5){\psplot[polarplot=true,linecolor=red,plotstyle=line]{0}{360}{1 x 180 sub sin sub 1.27535 mul 0 add}}% cardioid ref: http://mathworld.wolfram.com/HeartCurve.html
       \psdot[linecolor=red,dotsize=3pt](center)%
-      \fileplot\input{../symseq/larc_ball(05_05).dat}%
+      \fileplot{../symseq/larc_ball(05_05).dat}%
       \uput[0]{0}(center){$\opair{0.5}{0.5}$}
-    \end{pspicture} 
-    %&
-    %\begin{pspicture}(-3.5,-3.5)(4.5,4.5)%
-    %  \pnode(0.707,0.707){center}
-    %  \psaxes[linecolor=axis]{<->}(0,0)(-3.5,-3.5)(4.5,4.5)%
-    %  \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
-    %  \psdot[linecolor=red,dotsize=3pt](center)%
-    %  %\fileplot\input{../symseq/larc45.dat}%
-    %  \fileplot\input{../symseq/larc_ball(07_07).dat}%
-    %  \uput[60]{0}(center){$\opair{\frac{\sqrt{2}}{2}}{\frac{\sqrt{2}}{2}}$}
-    %\end{pspicture} 
-   %\\%
+    \end{pspicture}
     &
     \begin{pspicture}(-3.5,-3.5)(4.5,4.5)%
       \pnode(1,1){center}
       \psaxes[linecolor=axis]{<->}(0,0)(-3.5,-3.5)(4.5,4.5)%
       \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
       \psdot[linecolor=red,dotsize=3pt](center)%
-      \fileplot\input{../symseq/larc_ball(1_1).dat}%
+      \fileplot{../symseq/larc_ball(1_1).dat}%
       \uput[60]{0}(center){$\opair{1}{1}$}
-    \end{pspicture} 
+    \end{pspicture}
     \\
     \begin{pspicture}(-1.5,-1.5)(6.5,5.5)%
       \pnode(2,2){center}%
@@ -64,29 +43,29 @@
       \psaxes[linecolor=axis]{<->}(0,0)(-1.5,-1.5)(6.5,5.5)%
       \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
       \psdot[linecolor=red,dotsize=3pt](center)%
-      \fileplot\input{../symseq/larc_ball(2_2).dat}%
+      \fileplot{../symseq/larc_ball(2_2).dat}%
       \uput[0]{0}(center){$\opair{2}{2}$}%
       \rput[bl](0.6,0.9){discontinuity at $\opair{0}{0}$}%
      %\pscircle[fillstyle=solid,fillcolor=white,linewidth=0.75pt](center){1mm}%
       \ncline[linecolor=red,linewidth=0.75pt]{->}{disconlabel}{disconptrlocation}%
-    \end{pspicture} 
+    \end{pspicture}
     &
     \begin{pspicture}(-1.5,-1.5)(6.5,5.5)%
       \pnode(3.14159265,3.14159265){center}
       \psaxes[linecolor=axis]{<->}(0,0)(-1.5,-1.5)(6.5,5.5)%
       \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
       \psdot[linecolor=red,dotsize=3pt](center)%
-      \fileplot\input{../symseq/larc_ball(pi_pi).dat}%
+      \fileplot{../symseq/larc_ball(pi_pi).dat}%
       \uput[0]{0}(center){$\opair{\pi}{\pi}$}
-    \end{pspicture} 
+    \end{pspicture}
     &
     \begin{pspicture}(-1.5,-1.5)(6.5,5.5)%
       \pnode(4,4){center}
       \psaxes[linecolor=axis]{<->}(0,0)(-1.5,-1.5)(6.5,5.5)%
       \pscircle[linecolor=red,linestyle=dashed](center){3.14159265}%
       \psdot[linecolor=red,dotsize=3pt](center)%
-      \fileplot\input{../symseq/larc_ball(4_4).dat}%
+      \fileplot{../symseq/larc_ball(4_4).dat}%
       \uput[0]{0}(center){$\opair{4}{4}$}
-    \end{pspicture} 
+    \end{pspicture}
   \end{tabular}%
-\end{pspicture}% 
+\end{pspicture}%
