--- a/common/math/graphics/symseq/larc_ball(00_00_05).tex
+++ b/common/math/graphics/symseq/larc_ball(00_00_05).tex
@@ -22,7 +22,7 @@
       zmin=-0.75,zmax=1.75,%
       %%colorbar horizontal,%
       ]%
-      \addplot3[mesh] table[header=false]{../../common/math/graphics/balls/rdie_3d_larcball_05.dat};%
+      \addplot3[mesh] table[header=false]{../balls/rdie_3d_larcball_05.dat};%
     \end{axis}%
   \end{tikzpicture}%
   %\uput[45]{0}(center){$\opair{0}{0}$}
